# zephyr-mre

./: .clang-format  .gitignore  LICENSE  README.md  app.code-workspace  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: mimxrt1170_evk_mimxrt1176_cm7.overlay
app/src/: CMakeLists.txt  gui.c  gui.h  main.c
bsp/: CMakeLists.txt  Kconfig
bsp/drivers/display/: CMakeLists.txt  Kconfig
bsp/drivers/display/tga_display/: CMakeLists.txt  Kconfig  tga_display.c
bsp/drivers/display/tiff_display/: CMakeLists.txt  Kconfig  tiff_display.c
bsp/dts/bindings/: vendor-prefixes.txt
bsp/dts/bindings/tga_display/: custom,tga-display.yaml
bsp/dts/bindings/tiff_display/: custom,tiff-display.yaml
zephyr/: module.yml
